Restrict CORS to configured origins, fix Postgres JDBC URL